--- a/TestProject/Domain.Test.csproj
+++ b/TestProject/Domain.Test.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AvansDevOpsApp\AvansDevOpsApp.csproj" />
+    <ProjectReference Include="..\AvansDevOpsApp\Domain.csproj" />
   </ItemGroup>
 
 </Project>
